--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -23,7 +23,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      
+      - name: Run unit tests
+        run: pytest
 
+      - name: Create sample log file
+        run: |
+            mkdir -p logs
+            echo "INFO Application started" > logs/app.log
+            echo "WARNING Disk usage high" >> logs/app.log
+            echo "ERROR Connection failed" >> logs/app.log
+            echo "INFO User logged in" >> logs/app.log
+            
       - name: Run log analyzer
         run: |
           python src/log_analyzer.py
