--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -24,8 +24,10 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       
-      - name: Run unit tests
-        run: pytest
+          - name: Run unit tests
+          run: |
+            export PYTHONPATH=$PYTHONPATH:$(pwd)
+            pytest
 
       - name: Create sample log file
         run: |
