--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -1,4 +1,4 @@
-name: Python CI
+name: CI
 
 on:
   push:
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -22,21 +22,20 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      
-          - name: Run unit tests
-          run: |
-            export PYTHONPATH=$PYTHONPATH:$(pwd)
-            pytest
+          pip install -r requirements.txt
+
+      - name: Run unit tests
+        run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
+          pytest
 
       - name: Create sample log file
         run: |
-            mkdir -p logs
-            echo "INFO Application started" > logs/app.log
-            echo "WARNING Disk usage high" >> logs/app.log
-            echo "ERROR Connection failed" >> logs/app.log
-            echo "INFO User logged in" >> logs/app.log
-            
+          mkdir -p logs
+          echo "INFO Application started" > logs/app.log
+          echo "WARNING Disk usage high" >> logs/app.log
+          echo "ERROR Connection failed" >> logs/app.log
+
       - name: Run log analyzer
         run: |
           python src/log_analyzer.py
