Update Run log analyzer step

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -38,4 +38,5 @@ jobs:
 
       - name: Run log analyzer
         run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
           python src/log_analyzer.py
