Use Python module execution instead of relying on PATH

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run unit tests
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)
-          pytest
+          python3 -m pytest
 
       - name: Create sample log file
         run: |
